--- a/BasicInformation/午後/平成27年春期.md
+++ b/BasicInformation/午後/平成27年春期.md
@@ -22,9 +22,88 @@
 
 ## データベース
 
+10分 【成績】全5問中 5問 回答/3問 正解　正解率:60.0%  
+
+途中で便意が来たこともあり、もう少し吟味したがったが仕方なし。  
+10分で解いたけど、所々怪しいままで解いたらこのざまである。  
+とくにCOUNT(DISTINCT)は全く知らなかったのでまとめたい。  
+因みに、最初の問題は正規形に関する問題だったのだが、当日(2021/10/09 Sat)に正規形についてまとめた後だったので、よくわかった。  
+
+■2 不正解  
+世帯番号が欲しいのに、会員番号もGROUP BYに含めたら意味ないでしょ。
+なんでこれを選んでしまったのか。  
+いくら目の疲れがいつもより和らいだといっても、頭がこんな状態では勉強の意味がないのでは。  
+COUNT知らなかったのは仕方がないとしてもこれは普通に正解だったな。  
+惜しいことをした。  
+
+■3 不正解  
+COUNT(DISTINCT テーブル.フィールド名),COUNT(*)  
+最近COUNT(*)はレコード数ってのは学習したが、COUNTの中にDISTINCT書けるのは知らなかった。  
+
+まず俺が間違えた奴。
+COUNT(*),COUNT(会員表.会員番号)は同じ値になるので意味がないそうだ。  
+フィールド名をCOUNTとした場合の動作って何なんだろう。  
+
+[【SQL】COUNT(*)とCOUNT(カラム名)の違い](https://qiita.com/TomoProg/items/5ba5779b3015ac02f577)  
+すげードンピシャな記事があった。  
+正直会社では恥ずかしくて聞けない内容だな。  
+
+・COUNT(*)はNULL値かどうかに関係なく、取得された行の数を返す  
+・COUNT(カラム名)はNULL値でない値の行数を返す  
+
+``` txt
++----+--------+-------+
+| id | name   | price |
++----+--------+-------+
+|  1 | apple  |   100 |
+|  2 | banana |   120 |
+|  3 | grape  |   140 |
+|  4 | melon  |  NULL |
+|  5 | kiwi   |   120 |
++----+--------+-------+
+```
+
+select count(*) from shohin; → 5  
+select count(price) from shohin; → 4  
+
+以下解説  
+COUNT(\*)はグループ内のレコード数を取得する集計関数なので、上記のグループ化された表に対してCOUNT(*)を指定することで班ごとの会員数を表示することができます。
+また班ごとの世帯数は、班ごとにグループされた中に何種類の世帯番号が存在するかを調べればよいので、COUNT(世帯表.世帯番号)にDISTINCTを指定し、COUNT(DISTINCT 世帯表.世帯番号)とすることで重複行をカウントしないようにします。  
+
+[SQL | COUNT(DISTINCT column_name) は「同じ値の種類数」をカウントする](https://qiita.com/YumaInaura/items/1a1123ed4f33d30d9548)  
+初歩だって。トホホ・・・。  
+[COUNT句内でDISTINCTを使う／重複を排除したカウント](https://nyoe3.hatenadiary.org/entry/20100313/1268468670)  
+
+つまり、重複行を除いたカウントをしたい場合に有効な構文というわけだ。  
+そうなると次はDISTINCTとはどこまで含めることができるのか気になってきたぞ。  
+
+``` txt
++-------+--------+-------+
+| name  | sex    | score |
++-------+--------+-------+
+| Alice | female |    60 |
+| Bob   | male   |    70 |
+| Carol | female |    70 |
+| David | male   |    80 |
+| Eric  | male   |    80 |
++-------+--------+-------+
+```
+
+sex には male / famale の二種類がある。  
+SELECT COUNT(DISTINCT(sex)) AS sex_kind FROM scores; → 2  
+
+score には 60点 / 70点 / 80点の三種類がある。  
+SELECT COUNT(DISTINCT(score)) AS score_kind FROM scores; → 3  
+
 ---
 
 ## ソフトウェア設計
+
+21分 【成績】全6問中 6問 回答/5問 正解　正解率:83.3%  
+
+全部いけたと思ったのだが、やはり詰めが甘かったか・・・。  
+今回の問題は、仕様書をよく読めば、答えが書いてあるタイプの問題なので特にまとめることがない。  
+ER図も基本的なことばかりだし、間違った問題に関しても文中にそう書いてあるからとしか言えないし、ミスリードしてしまっただけである。  
 
 ---
 
