--- a/DB・SQL/データベースメモ.md
+++ b/DB・SQL/データベースメモ.md
@@ -40,6 +40,23 @@ DB上で扱うデータの重複を排除し、「矛盾」の発生を「設計
 `a→b→{f，g，h}、受注番号→顧客コード→顧客名`  
 ポイント：非キー項目に着目して、関数従属する項目を見つける  
 
+### 結局のところ、第1正規系と第2正規系と第3正規系って何が違うの？
+
+第1正規系はわかる。  
+正規化される前の状態はレコードが重複しまくって、データベースに格納できない状態だから、その重複を解消するのが第1正規系で行うこと。  
+正直、この状態は試験ではまず出ない。対策するなら第2正規系と第3正規系の一番微妙な間をやるべし。  
+
+第3正規系はマスターとしてまとまってる状態ではなかろうか。  
+主キーで一意に決まるテーブルとしてそれぞれ分離された状態。  
+少なくとも、業務でデータベースを設計するならここまでやらないと不十分だろう。  
+データを参照する際はテーブルを結合しまくってようやくデータが出来上がるって状態にまで分離された状態。  
+
+第1と第3がわかれば、第2もなんとなくわかってくるのでは？  
+正直、第2正規系が一番微妙なのだが、「これマスターとして分離できるよな？」ってのがあれば第2正規系状態といえるのではないだろうか。  
+次にデータベースの問題をやるなら、そういう点に着目してやってみようかね。  
+
+まぁ、ざっくりとしたイメージ、上に行くほ重複もなくなって、テーブルとして独立していくって考えればいいんじゃないでしょうかね。  
+
 ---
 
 ## 主キーはアップデート可能か？
