--- a/BasicInformation/午前/1.テクノロジ系/5.ソフトウェア.md
+++ b/BasicInformation/午前/1.テクノロジ系/5.ソフトウェア.md
@@ -103,21 +103,34 @@ Linuxのswap領域のあれ。
 「メモリとハードディスクの間でメモリの内容を移動させる」ということになる。
 
 
-**メモリインタリーブ**  
-主記憶装置を，同時に並行して読み書き可能な複数の領域に分ける方式。
+## ページング方式
 
-**ページング方式**  
-仮想メモリの話でよく出てくる用語で、メモリを決まった大きさのページ単位で管理するやり方
-仮想記憶管理方式の一つで仮想アドレス空間を「ページ」と呼ばれる固定長の区画に分割，同時に主記憶上も同じように固定長に分割して、
-このページ単位で主記憶と補助記憶装置のアドレス変換を行う方式です。
-処理に必要なページを動的に主記憶に割り当てることによって，主記憶を効率的に使用できる。
-ページング方式ではプログラムに割り当てるメモリが連続である必要がなく、大きなフラグメンテーションがほとんど発生しないため、
-メモリを無駄にしないというメリットがあります。
-ページは固定長のサイズ。
+[わかりそう](https://wa3.i-3-i.info/word13352.html)  
 
-**セグメント方式**  
-ページングがページと呼ばれる単位に細切れにして管理する方式なら、こちらはファイルごと移動させるやり方になる。
-まとめて移動させる固まりを「セグメント」として、メモリとやり取りする。
+仮想メモリの話でよく出てくる用語で、メモリを決まった大きさのページ単位で管理するやり方。  
+仮想記憶管理方式の一つで仮想アドレス空間を「ページ」と呼ばれる固定長の区画に分割，同時に主記憶上も同じように固定長に分割して、  
+このページ単位で主記憶と補助記憶装置のアドレス変換を行う方式です。  
+
+エクセルとかワードをメモリにロードしたときに、それらを十字に切って、1つ1つ(ページ)を仮想メモリとやり取りするイメージ。
+ページは固定長。  
+切るイメージはいいとして、重要なのは、それをするメリットだ。  
+簡単に言えば主記憶を効率よく使えるってのが答えだ。  
+
+**平成26年春期　問16**  
+ページング方式の仮想記憶を用いることによる効果はどれか。  
+→  
+処理に必要なページを動的に主記憶に割り当てることによって，主記憶を効率的に使用できる。  
+→  
+ページング方式ではプログラムに割り当てるメモリが連続である必要がなく、大きなフラグメンテーションがほとんど発生しないため、メモリを無駄にしないというメリットがあります。
+
+## セグメント方式
+ページングがページと呼ばれる単位に細切れにして管理する方式なら、こちらはファイルごと移動させるやり方。  
+まとめて移動させる固まりを「セグメント」として、メモリとやり取りする。  
+
+## メモリインタリーブ  
+主記憶装置を，同時に並行して読み書き可能な複数の領域に分ける方式。  
+応用の時はバンバン出てきた。  
+
 
 **ページフォールト**  
 プログラムの実行に必要なページが主記憶に存在していないときに発生する割込みです。
