--- a/BasicInformation/午後/平成27年春期.md
+++ b/BasicInformation/午後/平成27年春期.md
@@ -109,6 +109,109 @@ ER図も基本的なことばかりだし、間違った問題に関しても文
 
 ## アルゴリズム
 
+30分オーバー 【成績】全6問中 6問 回答/5問 正解　正解率:83.3%  
+
+間にトレイを挟んでしまったけど、体感的には40分位かかってしまっただろうか。  
+もっと丁寧にわかりやすくトレース記録を残しておけば苦労しなかっただろうなと思う。  
+ちょっとトレースの仕方が雑過ぎた。  
+内容はクイックソートの問題だったのだが、知識はあってもトレースは必要だったので時間がかかってしまった。  
+8割正解したけど、トレースが雑過ぎて時間がかかってしまったので、個人的にはあまりうれしくない。  
+こんなんじゃダメだって気持ちのほうが強い。  
+しかも、よく見るとトレースの仕方間違ってたな。  
+よく見てみると、ループ処理の順番が違う。  
+はぁ・・・。気が重くなるぜ。  
+
+1問目に関しては、トレースというより状況から察することが出来た。  
+こういう問題ってどうしてもトレースに依存してしまって全体が見えないことがあるので、その意味では気が付けてよかったと思う。  
+というか、クイックソート自体、ピボットとなった値が適切な一にソートされるソート法なので、  
+ピボットになった時には既に場所は決まっているようなものだ。  
+
+配列のトレースの仕方を考えなおしたほうがいい。  
+数列の中にx[i]やx[j]をおいて、変数のほうを動かして考えたほうがいいのかも。  
+
 ---
 
 ## Java
+
+19分 【成績】全6問中 6問 回答/5問 正解　正解率:83.3%  
+
+Javaは30分かかる場合と一瞬で終わる場合がある。  
+今回は一瞬で終わるほうだった。  
+トレースではなく、日本語とプログラムをマッチさせるだけのほうが個人的には楽でよい。  
+
+最後の問題はミスリードしてしまった。`<script>`と`</script>`の間は除くって意味は,  
+`<script>alert('注意!');</script>`を全部をやらないのでは無く、`<script>`と`</script>`はやらなくて、`alert('注意!');`はやるって意味らしい。  
+日本語って難しいね。  
+あぁ。よく読めば確かにそうだ。  
+`<script>`自体がタグなのだ。  
+だからこのタグの間はやるってのはそのまんまだ。  
+選択肢に0を用意したのは俺のような間抜けをおびき出すための罠だったんだ。  
+クソ。意地汚いことしてくれる。  
+
+``` txt
+サニタイズが必要な場面は2つあり、1つ目がHTMLタグの間（scriptタグの間は除く）、2つ目がJavaScriptの文字列、すなわちscriptタグ内部です。
+2つ目のケースがscriptタグ内の文字列を指しているので、1つ目のHTMLタグから除外しているのだと思います。
+設問2のプログラムは、HTMLタグ用のHtmlEncoderを使っているため、1つ目の変換規則に基づいてサニタイズされることとなります。
+HTMLタグ内にscriptタグを含む文字列を表示する場合に、正しくサニタイズされるかどうかをテストしていると考えると良いでしょう。
+```
+
+``` txt
+クラス HtmlEncoder の内部でメソッド encode が呼ばれるのは、convertionTable.get(c) の結果がnull、
+すなわち convertionTable に登録されていない文字に遭遇した場合です。
+クラス HtmlEncoder で登録対象となっているのは以下の文字です。
+英数字 0-9a-zA-Z
+記号 !#$%()*＋,－.:;=?@[\]^_`{|}~
+<>&"
+したがって〔プログラム4〕でサニタイズの対象となっている文字列のうち、上記に含まれない以下の5文字についてメソッド encode が呼ばれることになります。
+よって、呼び出される回数は5回です。
+```
+
+あれ？  
+スクリプトはやらないと言っておきながら、タグの〆の\マークは対称になっているな・・・。  
+うーん・・・。結局全部やるって事でいいんじゃないかこれ。  
+どちらにせよ、登録されている文字との比較では絶対に5文字判定されることになるんだからやっておけばよかったってわけだ。  
+
+どうでもいいけど、C#でabstractを実装したクラスと親クラスとの動作がわからなかったけど、このJavaの問題でそれが解決したのでまとめておこう。
+
+``` java
+abstract public class Encoder{
+    // 実装強制。HtmlEncoderクラスに実装されるメソッド。
+    abstract protected String encode(char c);
+    // 1.テストクラスから呼び出されるencodeメソッド
+    public String encode(String s) {
+        String result = "";
+        for (char c : s.toCharArray()){
+            String t = conversionTable.get(c);
+            // 2.文字列を1文字ずつ読みこんだ時に、登録された文字では無かったら、abstractを実装したクラスのencodeメソッドを実行する。
+            if (t == null) {
+                // 3.ここで呼び出すのが、HtmlEncoderのencodeメソッド
+                t = encode(c);
+            }
+            result += t;
+        }
+        return result;
+    }
+}
+
+public class HtmlEncoder extends Encoder {
+    // 3.というわけで色々やってHtmlEncoderのencodeメソッドが呼び出されるわけである。
+    protected String encode(char c){
+        // ごにょごにょ
+    }
+}
+
+public class HtmlEncoderTest {
+    static public void main(String[] args){
+        // 1.この時呼ばれるencodeメソッドはEncoderクラスのencodeメソッド。その証拠にstring型だ。
+        // HtmlEncoderクラスのencodeメソッドを呼び出しているように見えるけど、引数の関係で親クラスのメソッドを呼び出している状態である。
+        // C#のAPI側の保存メソッドの時も、こういうからくりで動いているのだろう。
+        // abstract側で定義されたメソッドから、各インスタンスのメソッドを呼び出していたわけだ。
+        // 引数の型の違いによるオーバーロードはC#では出来ないと思ってたけど、普通に出来たしJavaでもできることを確認した.
+        new HtmlEncoder().encode("<script>alert('注意');</script>");
+    }
+}
+```
+
+charとは？→Javaの中でまとめる。
+int(char)のキャストはその文字コードに変換するという意味らしい。→これも詳しくはJavaで。
+Javaのプログラム写経してみたけど、stringってS大文字じゃないと認識してくれないんだな。
