10月11日会社分

--- a/Trivia/言葉の意味.md
+++ b/Trivia/言葉の意味.md
@@ -1,18 +1,27 @@
 # 言葉の意味まとめ
 
-・難儀
-１ 苦しみ悩むこと。苦労すること。また、そのさま。「腰を屈めるのも難儀だ」「雪道を行くのに難儀する」
-２ 面倒なこと。迷惑なこと。また、そのさま。「難儀をかける」「難儀な話をもちこむ」
-３ 処理するのがむずかしいこと。また、そのさま。一大事。  
+・難儀（なんぎ)  
+1 苦しみ悩むこと。苦労すること。また、そのさま。「腰を屈めるのも難儀だ」「雪道を行くのに難儀する」  
+2 面倒なこと。迷惑なこと。また、そのさま。「難儀をかける」「難儀な話をもちこむ」  
+3 処理するのがむずかしいこと。また、そのさま。一大事。  
+
+・瑕疵(かし)  
+通常、一般的には備わっているにもかかわらず本来あるべき機能・品質・性能・状態が備わっていないこと。  
+特定の売買契約においてその目的物に何らかの欠陥・不具合があることで、その品質や性能が損なわれている状態を指しています。  
+
+---
 
 ・深謀遠慮(しんぼう-えんりょ)  
 深く考えを巡らし、のちのちの遠い先のことまで見通した周到綿密な計画を立てること。  
+
+・神算鬼謀(しんさん-きぼう)  
+人知の及ばないような、すぐれた巧みな策略のこと。  
 
 ・色即是空(しき-そくぜ-くう)  
 現世に存在するあらゆる事物や現象はすべて実体ではなく、空無であるということ。  
 ▽仏教語。「色」はこの世のすべての事物や現象。「空」は固定的な実体がなく空無であること。  
 
-・乾坤一擲(けんこんいってき)
+・乾坤一擲(けんこんいってき)  
 運を天に任せ、一世一代の大勝負に出ることのたとえ。  
 All or nothing.（すべてか無か）  
 The die is cast.（賽は既に投げられた）  
