--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -92,8 +92,6 @@ ORマッパーとはなにか？
 
 ・スイッチは第何層で動く装置だったか。
 
-・gulpってなに？
-
 ・プライベートとグローバルを覚えたい。
 
 ・80 70
@@ -148,3 +146,8 @@ IPアドレスに関してはクラス分けとプライベートの範囲さえ
 
 〆・英語ee
 〆・電子署名
+
+〆・gulpってなに？
+→  
+ビルドするときに、あれやってこれやってってのを登録するプログラム。  
+ビルド自動化の命令を記述したファイル。  
