--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -458,3 +458,9 @@ PMBOKによればプロジェクトにマイナスの影響を与えるリスク
 例えば、Webサイトをリニューアルする際、念のため、昔のサイトのバックアップをテストサイトとして残しておき、万が一公開作業に失敗したらすぐに切り替えられるようにすることがあります。この「テストサイトの維持」というのは、「リニューアルの公開作業」というアクティビティが開始した時に始められ、「リニューアルの公開作業」の終了とともに役割を終えます。こうした関係がSFの関係です。
 
 ---
+
+
+EVM
+
+線形計画法
+
