--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -904,9 +904,299 @@ A×V＝W
 
 消費する電力量は1500Whが適切です。
 
+---
+
+2021/10/11 Mon
+
+**平成27年秋期　問16**
+システム全体のスループットを高めるために，主記憶装置と低速の出力装置とのデータ転送を，高速の補助記憶装置を介して行う方式はどれか。
+→
+スプーリング
 
 
 
+**平成28年春期　問71**
+ディジタルディバイドを説明したものはどれか。
+→
+特になし。
+
+
+**平成27年春期　問24**
+ビットマップフォントよりも，アウトラインフォントの利用が適しているケースはどれか。
+→
+ビットマップフォント
+文字をドット(点)の集合で表現したフォント形式。
+[メリット]
+描画速度が速い
+[デメリット]
+拡大・縮小を行った際に輪郭がギザギザに見える「ジャギー」という現象が発生する
+アウトラインフォント
+文字を基準となる座標とそれらを結ぶ線の輪郭線情報として表現するフォントで、現在、一般的に使用されている方式。
+[メリット]
+幾ら拡大しても輪郭線がギザギザにならないため、どのような解像度でも対応できる
+[デメリット]
+表示や印刷の度に輪郭を計算しなくてはならないため描画処理に時間が掛かる
+
+→
+正反対の答えを選んでしまった。  
+
+
+
+**平成29年秋期　問25**
+3次元CGのレンダリングにおける，隠線消去及び隠面消去の説明はどれか。
+→  
+文脈から十分わかる。  
+表示する画面内の描画はクリッピング。  
+どちらも映ってない部分を消す処理であるが、対象が違う。  
+
+
+
+**平成26年秋期　問72**
+コンカレントエンジニアリングの説明として，適切なものはどれか。
+→  
+コンカレントは同時並行という意味。  
+最近英単語を覚えたので問題ない。  
+
+
+
+**平成30年秋期　問73**  
+ネットビジネスでのOtoOの説明はどれか。  
+→  
+見たことあるけど覚えてなかった。  
+BTOとエスクローはわかった。  
+仮想店舗↔実店舗 Online to Offline。  
+覚えた。  
+
+間違えたこれはフリーミアムというらしい。  
+サブスクリプションとも微妙に違うんだな。  
+基本的なサービスや製品を無料で提供し，高度な機能や特別な機能については料金を課金するビジネスモデルである。  
+
+
+
+**平成30年春期　問64**
+UMLをビジネスモデリングに用いる場合，ビジネスプロセスの実行順序や条件による分岐などのワークフローを表すことができる図はどれか。
+→  
+シーケンス図と同じく、実行順序を表現できるとどこかで聞いた。  
+アクティビティ図はUML版フローチャートと覚えるべし。  
+重要な問題なので赤のままでいい。  
+
+
+
+**平成28年春期　問4**
+PCM伝送方式によって音声をサンプリング(標本化)して8ビットのディジタルデータに変換し、圧縮せずにリアルタイムで転送したところ、転送速度は64,000ビット／秒であった。このときのサンプリング間隔は何マイクロ秒か。
+→  
+書けるか割るかするしかないのは確かだが、なぜそうでなければならないのかはわからない。
+
+とりあえず、64,000/sの逆数を計算してみたら15.6とこたえがあったので選んだら死んだ。
+答えは1/8000で125マイクロだった。  
+大体、ある数字を2回くらい変換したらいい感じになる。  
+
+標本化→量子化→符号化。  
+
+64,000/sは1秒間に64000ビットのデータが生成される。
+1回のサンプリングで生成されるデータは8ビット。  
+64000を8で割る。
+1秒間に8000回のサンプリングを行うためには125マイクロ秒でサンプリングを実行する必要がある。  
+
+
+
+**平成31年春期　問7**
+次の流れ図は，2数 A，B の最大公約数を求めるユークリッドの互除法を，引き算の繰返しによって計算するものである。Aが876，Bが204のとき，何回の比較で処理は終了するか。
+→
+L = 876
+S = 204
+
+1回目
+L > S
+L = 876-204 = 672
+
+2回目
+L > S
+L = 672-204 = 468
+
+3回目
+L > S
+L = 468-204 = 264
+
+4
+L > S
+L = 264 - 204 = 60
+
+5
+L < S
+S = 204 - 60 = 144
+
+6
+L < S
+S = 144 - 60 = 84
+
+7
+L < S
+S = 84 - 60 = 24
+
+8
+L > S
+L = 60 - 24 = 36
+
+9
+L > S
+L = 36 - 24 = 12
+
+10
+L < S
+S = 24 - 12 = 12
+
+11
+L = S
+
+確か最後の1回を勘定に入れなかったので間違ったと思う。  
+
+
+
+**平成29年秋期　問52**
+全部で100画面から構成されるシステムの画面を作成する。100画面を規模と複雑さで分類したときの内訳は次のとおりである。
+規模が"小"で，複雑度が"単純"である画面：30
+規模が"中"で，複雑度が"普通"である画面：40
+規模が"大"で，複雑度が"普通"である画面：20
+規模が"大"で，複雑度が"複雑"である画面：10
+全ての画面を作成する総工数を，表の作成工数を用いて見積もると何人日になるか。ここで，全部の画面のレビューと修正に5人日を要し，作業の管理にはレビューと修正の工数を含めた作業工数の20%を要するものとする。
+→  
+
+(30 * 0.4 + 40 * 0.9 + 20 * 1.0 + 10 * 1.2 + 5) * 0.2
+12,36,20,12,5 = 85*1.2 = 102
+
+設問の表から作成工数をケースごとの作成工数を読み取り、総工数を算出します。
+
+[規模が"小"で，複雑度が"単純"である画面]
+　画面当たりの作成工数→0.4
+　30×0.4＝12(人日)
+
+[規模が"中"で，複雑度が"普通"である画面]
+　画面当たりの作成工数→0.9
+　40×0.9＝36(人日)
+
+[規模が"大"で，複雑度が"普通"である画面]
+　画面当たりの作成工数→1.0
+　20×1.0＝20(人日)
+
+[規模が"大"で，複雑度が"複雑"である画面]
+　画面当たりの作成工数→1.2
+　10×1.2＝12(人日)
+
+このすべてを足し合わせると、画面の作成に要する工数がわかります。
+
+　12＋36＋20＋12＝80(人日)
+
+さらに全画面のレビューと修正に5人日かかるので、画面作成の工数に5人日を足します。
+
+　80＋5＝85(人日)
+
+また作業の管理にはレビューと修正を含めた作業工数の20%を要するので、作業の管理に要する工数は、
+
+　85×0.2＝17(人日)
+
+この2つを足した数が求めるべき総工数です。
+
+　85＋17＝102(人日)
+
+まぁ、そのままやって当たったということは今後も大丈夫ということだ。  
+
+
+
+**平成31年春期　問59**
+経営者が社内のシステム監査人の外観上の独立性を担保とするために講じる措置として，最も適切なものはどれか。
+→  
+確か継続的学習だった気がするなぁ。
+所属部署を内部監査部門として独立性が担保される理由は？
+でも、他の3つは学習に重きを置いている気がする。
+学習系の答えが2つある地点でそれは外れでは？
+となると、消去法的に内部監査が一番説得力があるんだよなぁ。
+自分の部署の人間が自分の部署を調べるのがダメだった気がする。  
+監査部門となる事自体、独立したのど同義と言えるのでは無かろうか？
+→  
+合ってた。  
+ここまで考えてようやくか。  
+→  
+システム監査基準では、システム監査人に求められる独立性、客観性として「外観上の独立性」及び「精神上の独立性」を定めています。
+外観上の独立性
+システム監査人は、監査対象の領域又は活動から、独立かつ客観的な立場で監査が実施されているという外観に十分に配慮しなければならない。
+精神上の独立性
+システム監査人は、監査の実施に当たり、客観的な視点から公正な判断を行わなければならない。
+
+企業内に所属するシステム監査人が、外観上の独立性を保つためには独立した立場である必要があります。システム監査人の所属を内部監査部門にすることで、どの部門からも独立した公平な立場とすることができ、外観上の独立性を保つことができます。
+
+
+
+**平成28年秋期　問6**
+2分探索木になっている2分木はどれか。
+→
+これも復習済み。
+縦に分けたときに昇順になっているものだ。  
+→
+2分探索木は、2分木※の各節にデータをもたせることで探索を行えるようにした木です。各節がもつデータは「その節から出る左部分木にあるどのデータよりも大きく、右部分木のどのデータよりも小さい」という条件があります。
+
+要するにどの部分についても「左＜中＜右」の関係を満たしていれば2分探索木といえます。最も簡単に見分ける方法は図示されている木構造の各節点を左から順にならべて昇順になっているか否かを確認することです。
+
+
+
+**平成26年春期　問56**
+ITサービスマネジメントにおける"既知の誤り(既知のエラー)"の説明はどれか。
+→  
+え？日本語そのままなのだが、これ、俺間違えたのか？  
+→  
+既知の誤り(Known error)は、根本原因が特定されているか、若しくは回避策(ワークアラウンド)によってサービスの影響を低減又は除去する方法がある問題です。(JIS Q 20000-1より引用)
+
+
+
+**平成29年春期　問57**  
+ITサービスマネジメントの活動のうち，インシデント管理及びサービス要求管理として行うものはどれか。  
+→  
+これは日本語から想像しにくいな。
+逆だ。想像出来過ぎて特定出来ない。
+ディスクの空き領域が閾値に近いのはインシデントだが、わかってから対策するのは遅すぎる気がする。
+障害報告を受けて、既知の誤りに該当するか確認するのがインシデントにもサービスにも絡んでいるので、もっともらしい答えな気がするが果たして。  
+→  
+正解だった。  
+そういう考えでいいだな。  
+→
+インシデント管理は、サービスに対する計画外の中断、サービスの品質の低下、あるいは顧客へのサービスにまだ影響していない事象が報告された時に、サービスの中断時間を最小限に抑えて速やかに回復することを目指すプロセスです。  
+ITILでは、インシデント管理が独立したプロセスとして定義されていますが、JIS Q 20000-1「第1部 サービスマネジメントシステム要求事項」では、インシデントとサービス要求※の両方を合わせた「インシデント及びサービス要求管理」として定義されています。  
+→  
+なるほど。報告を受けて迅速に回復することを目指すプロセスならば、答えは1つしかないわな。
+因みに迷った奴だが、
+ディスクの空き容量がしきい値に近づいたので，対策を検討する。
+キャパシティ管理の役割です。
+ここまで来るとなんでも有りな気がしてくる。  
+
+
+
+**平成31年春期　問58**
+システム監査人がインタビュー実施時にすべきことのうち，最も適切なものはどれか。
+→  
+確か証拠を入手するだった気がする。  
+うん。合ってた。
+→
+インタビュー法とは、監査手続の技法の1つで、監査対象の実態を確かめるために、システム監査人が、直接、関係者に口頭で問い合わせ、回答を入手することをいいます。
+インタビューは、情報収集や問題発見に有効な手段ですが、ただ見聞きしただけの情報では監査証拠として不十分です。証拠としての適切性を確保するためには、インタビューで得た情報だけに依存するのではなく、現物・状況等の確認や照合、さらにはシステム監査人によるテストの実施、詳細な分析などを通じて可能な限り客観的で確証的な証拠を入手するよう心掛けることが重要です。
+
+
+
+**平成28年春期　問72**
+①～③の手順に従って処理を行うものはどれか。
+1.今後の一定期間に生産が予定されている製品の種類と数量及び部品構成表を基にして，その構成部品についての必要量を計算する。
+2.引当て可能な在庫量から各構成部品の正味発注量を計算する。
+3.製造／調達リードタイムを考慮して構成部品の発注時期を決定する。
+→
+基本情報MRP大好きだからな。
+この横文字の意味を覚えておいたほうがいい。  
+明日やるか。  
+→
+MRP(Materials Requirements Planning)は、日本語では資材所要量計画と呼ばれ、部品表と生産計画をもとに必要な資材の所要量を求め、これを基準に在庫，発注，納入の管理を支援するシステムです。
+将来どれだけの製品(商品)が販売されるか予測する。
+それぞれの製品が組み立てられる時間を逆算する。
+資材表を使い製品を組み立てるのに必要な部品のリストを展開する。
+組み立て時間から逆算し、部品を順次注文する。
+という計画のもとに資材を管理します。
 
 
 
