10月13日出社前

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -294,7 +294,6 @@ Singletonパターンが適したクラス例
 前のJavaまとめ
 C#配列
 javaジェネリック
-ALUとかプログラムカウンタなど
 午前問題のまとめ
 UTF-8,UNICODE,ShiftJis
 絶対値とは
@@ -302,4 +301,30 @@ UTF-8,UNICODE,ShiftJis
 ジェネリックの書き方程度でいい。
 配列はjavaだけ。
 スマホでやる午前はssで対応
+
+
+
+
+身長が次に高いのどれか。
+「次に」あー、言われてみればBしかないよな。
+Cの次がDってだけで、Cより高いに過ぎないからな。
+Cについで高いってならBしかない。
+
+
+朝のうちに100均行って買うものかうか。
+出ないと時間がないよな。
+時間短縮のため、車を使う。
+こういう時のための車だ。
+
+
+今日の目標は50問。
+朝のうちに20問はやっておきたい。
+
+
+朝起きたときに暖房があったほうがいい。
+もうそういう時期だ。
+快適に過ごせるならお金を使う。
+
+
+
 
