10月13日会社分

--- a/BasicInformation/とにかく.md
+++ b/BasicInformation/とにかく.md
@@ -459,20 +459,143 @@ PMBOKによればプロジェクトにマイナスの影響を与えるリスク
 
 ---
 
+## RAID(Redundant Arrays of Independent Disks)
 
-EVM
+複数台の磁気ディスクを組み合わせ、仮想的な1台の記憶装置として運用することで、全体として高い性能を得る技術です。
+RAIDには0～5のレベルがありますが、その区別は本来のデータとエラー訂正用のデータ（ハミング符号・パリティビット）を、どのように書き込むかによって定義されています。
 
-線形計画法
+### RAID0(ストライピング)
+複数のディスクに分散してデータを書き込むことで、アクセス性能を向上させる。
 
-LRU
+### RAID1(ミラーリング)
+同じデータを2台のディスクに書き込むことで、信頼性を向上させる。実質記憶容量は50%となるので記憶効率は悪い。
 
-RAID
+### RAID2
+複数の磁気ディスクに分散してビット単位でデータを書き込み，さらに，複数の磁気ディスクにエラー訂正符号(ECC)を書き込む。
+データにエラー訂正用のハミング符号を付加したものをストライピングで書き込む。
 
-リエントラント
+### RAID3
+複数の磁気ディスクに分散してバイト単位でデータを書き込み，さらに，1台の磁気ディスクにパリティを書き込む。
+データのエラー訂正用にパリティビットを使用し、一つのディスクをエラー訂正符号の書き込み専用とする。
 
-ACID特性
+### RAID4
+RAID3とほぼ同じ。RAID3でビット/バイト単位だったストライピングをブロック単位で行う。
+
+### RAID5
+情報データとともにパリティビットも各ディスクに分散して書き込む方式。信頼性、アクセス性能が共に高まる。
+
+ストライピング単位
+      読書単位  誤り訂正方式   誤り訂正符号格納場所
+RAID2 ビット    ハミング符号   1台のディスク
+RAID3 ﾋﾞｯﾄ/ﾊﾞｲﾄ パリティビット 1台のディスク
+RAID4 ブロック  パリティビット 1台のディスク
+RAID5 ブロック  パリティビット 複数台に分散
+
+ストライピングという言葉に意味はなく、単純にRAID0の別名みたいだ。
+RAID0がストライピングであり、ストライピングといったらRAID0の関係らしい。
+因みに、分散してデータを書き込むと速度が早くなるらしいが、
+これは両手にペンを持って10までの数字を右のノートは偶数、左のノートには奇数を書くイメージをいいかも？
+両方に同時に書き込むので、1から順番に1冊のノートに書きこむよりも早く書き込める。
+正し、どちらか一方が死んだ途端、意味をなさなくなるので信頼性は低いというわけだ。
+
+---
 
 アキュムレータ
 プログラムカウンタ
 命令レジスタ
 ALU
+
+
+CPUのプログラムレジスタ(プログラムカウンタ)の役割はどれか。  
+令和元年秋期　問9  
+
+**プログラムカウンタ**  
+CPUの制御装置にある専用レジスタの1つで、次にフェッチ(メモリからの呼び出し)・解読・実行される命令のアドレスを保持する役割を持つ。  
+命令が実行されると、プログラムカウンタは読みこんだ命令長だけ自動的に加算され、次の命令のアドレスを差すようになる。  
+分岐命令の際は、ジャンプ先のアドレスをプログラムカウンタにセットすることで命令実行順序を制御する。  
+→なるほどねー。だからプログラムカウンタなわけか。  
+
+- 演算を行うために、メモリから読みだしたデータを保持する。  
+汎用レジスタ  
+- 条件付き分岐命令を実行するために、演算結果の状態を保持する。  
+アキュムレーター  
+- 命令のでコードを行うためにメモリから読みだした命令を保持する。  
+命令レジスタ  
+- 命令を読み出すために，次の命令が格納されたアドレスを保持する。
+正しい。プログラムレジスタの役割です。
+
+これ、やった事ある問題だけど、間違ったやつだな。  
+当時は単純なこと過ぎて逆にわからなかった。  
+
+
+
+一般に命令の実行は、次の5つのステージに分かれています。フェッチ（fetch）とは「取ってくる」をいう意味をもつ言葉です。
+### 命令フェッチ
+プログラムカウンタが示すアドレスから命令語を命令レジスタに取り出す。
+
+### 命令デコード
+命令デコーダが取り出した命令を解読する。
+
+### 実効(有効)アドレス計算
+命令語のオペランド部の値を用いて、演算対象のデータを保持する主記憶のアドレスを計算する。
+
+### オペランドフェッチ
+計算されたアドレス値を用いて主記憶からデータを汎用レジスタに取り出す。
+
+### 実行
+解読された命令と演算対象のデータで命令を用いて演算を行う。
+
+
+### プログラムカウンター(プログラムレジスタ)
+次に実行するべき命令が格納されている主記憶上のアドレスを保持するレジスタです。
+命令自体はメモリ上にある。そのアドレスを保持するレジスタでしかない。
+
+### 命令レジスタ
+主記憶から取り出された命令が格納される場所です。
+
+### ALU(Arithmetic Logic Unit)
+演算装置。論理演算と加算、減算を行う。記号はめっちゃ太字のVみたいなやつ。
+
+### アキュムレータ
+演算途中の結果を一時的に保持しておくためのレジスタです。
+演算データを保管するレジスタが1つしかない場合、このレジスタを「アキュムレータ」と呼ぶ。
+
+### 汎用レジスタ
+データの一時的な保持や演算結果の格納など、使い方を自由に決められる。
+CPUの中にあって、演算データを一時的に保管するレジスタを複数持つ場合、この複数のレジスタ群を「汎用レジスタ」と呼ぶ。
+
+### スタックポインタ
+スタックの先頭アドレスを保持する。
+
+### レジスタファイル
+レジスタを複数集めたプロセッサ内のモジュール
+
+
+コンピュータは、次のようなサイクルを繰り返して命令を処理していきます。
+①プログラムカウンタを参照して、次に実行すべき命令が格納されている位置を知る。
+②主記憶から命令レジスタに命令を読込む。(命令フェッチ)
+③その次に実行する命令の主記憶上のアドレスをプログラムカウンタに格納する。
+④命令レジスタの命令を命令デコーダで解読(解釈)する。(命令デコード)
+⑤演算で必要となる値(オペランド)を主記憶やレジスタから読込む。(オペランド読出し)
+⑥命令を実行する。
+⑦実行結果を主記憶やレジスタに書込む。
+
+---
+
+
+
+EVM
+
+線形計画法
+
+損益分岐点ってそもそも何ってところから理論的に求められるようにならないと一生覚えれないと思う。
+利益と損が相殺されて0になる点だった気がする。
+
+
+LRU
+
+リエントラント
+
+ACID特性
+
+
