--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -176,6 +176,13 @@ ControlTemplate単体で定義して、x:keyで指定することも可能な模
 [テンプレート（WPF）](https://ufcpp.net/study/dotnet/wpf_template.html)  
 [[WPF]ComboBoxのControlTemplateを使ってシンプルかつMouseOrver時に色が変わるComboBoxを作ってみた](https://qiita.com/nori0__/items/61bc195ff6e07ff1daa5)  
 
+
+
+・SnapsToDevicePixels
+
+エッジをシャープにするオプションらしい。
+これがないとぼやけるっぽいので常につけておけばいいんじゃないかな。
+
 ---
 
 ## シングルトン
