--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -1944,6 +1944,57 @@ OSがCPUやシステム資源を管理し、CPU使用時間や優先度などに
 
 
 
+**平成26年春期　問78**
+表は，ある企業の損益計算書である。損益分岐点は何百万円か。
+→
+
+公式を覚えて、それにぶち込めば解ける問題ではあるが、なぜその公式になるのか、理論を理解しないと一生覚えられない。
+500 / 1 - (140 / 700) = 625  
+
+→
+損益分岐点は、
+
+　損益分岐点＝固定費÷(1－変動費率)
+
+の公式で求められます。
+
+変動費率とは、売上高の中で変動費が占める割合を示す値です。
+
+この問題の場合、
+
+固定費＝200＋300＝500
+　変動費＝100＋40＝140
+　変動費率＝140÷700＝0.2
+
+という値になり、そのまま公式に当てはめると、
+
+　損益分岐点＝500÷(1－0.2)＝625
+
+計算結果から、損益分岐点は625百万円であることが求められます。
+
+蛇足ですが、企業会計の問題は簿記を一度学んだことがあると簡単に解けるようになります。
+日商簿記2級程度までの知識を頭に入れておくと企業の会計問題が簡単にわかるようになるのでおすすめです。
+
+
+損益分岐点は売上高で費用をまかなえて、ここから先は利益になるラインの事をいう。
+
+利益、変動費、固定費
+利益 = 売上高 - 変動費 - 固定費
+
+変動比率 = 変動費 / 売上高
+変動費 = 売上高 * 変動比率
+
+ここの変換はこう考えればいい。
+売り上げが上がるとそれに伴って変動費もかかってくるのだから、売上高にある比率が掛けられれば、それが変動費となる。
+
+利益 = 売上高 - 売上高 * 変動比率 - 固定費 = 売上高(1 - 変動比率) - 固定費
+損益分岐点は利益が0になるので、
+0 = 売上高(1 - 変動比率) - 固定費
+売上高 = 固定費 / 1 - 変動比率
+
+この売上高が損益分岐点というわけだ。  
+
+
 
 
 
