--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -311,6 +311,9 @@ UTF-8,UNICODE,ShiftJis
 
 
 
-
+昨日は22時まで残業して24時を過ぎて寝たのに、寝起きはかなりすっきりしている。
+眠りが深かったようなが気がする。
+そのくせ8時に目覚ましセットしてたのに、7時20分には怪しいと思って目が覚めたので体内時計はしっかりしている模様。
+それだけで何故かうれしい。
 
 
