--- a/Math/とりあえず.md
+++ b/Math/とりあえず.md
@@ -98,5 +98,10 @@ x = -30
 
 ## 絶対値(Absolute)
 
-絶対値とは、原点0からの距離をあらわす値です。  
-絶対値は距離、符号は方向  
+・その符号を無視して得られる非負の値。
+・プラスでもマイナスでもなく、数そのもの。
+・実数から符号を取り除いたもの。
+
+数直線上で考えた場合
+・原点0からの距離をあらわす値。
+・絶対値は距離、符号は方向。  
