--- a/Math/指数・対数.md
+++ b/Math/指数・対数.md
@@ -1,5 +1,10 @@
 # 指数・対数
 
+超基本  
+
+$真数 = 基数(底)^{指数}$  
+$指数 = log_{基数(底)}真数$  
+
 ---
 
 ## 指数
@@ -13,6 +18,8 @@
 ---
 
 ## 対数
+
+指数を求めるための道具。
 
 ### 基本
 
