--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,5 +1,22 @@
 # 後でまとめたいやつら
 
+## 最近見つかったシンプルなソート法
+
+``` C#
+var array = new int[2,4,5,6,4,6,8,2,8,9,4];
+
+for(var i = 0 ; array.length; i++){
+    for(var j = 0 ; array.length; j++){
+        if (array[j] < array[i]){
+            swap(array[i],array[j]);
+        }
+    }
+}
+
+// O(n^2)
+```
+
+
 ## 添付プロパティ
 
 例えば、テキストボックスとボタンがあります。
@@ -309,11 +326,5 @@ UTF-8,UNICODE,ShiftJis
 配列はjavaだけ。
 スマホでやる午前はssで対応
 
-
-
-昨日は22時まで残業して24時を過ぎて寝たのに、寝起きはかなりすっきりしている。
-眠りが深かったようなが気がする。
-そのくせ8時に目覚ましセットしてたのに、7時20分には怪しいと思って目が覚めたので体内時計はしっかりしている模様。
-それだけで何故かうれしい。
 
 
